content/_generated-doc/2.13/config/quarkus-scheduler-scheduler-config.adoc

:summaryTableId: quarkus-scheduler-scheduler-config
[.configuration-legend]
icon:lock[title=Fixed at build time] Configuration property fixed at build time - All other configuration properties are overridable at runtime
[.configuration-reference, cols="80,.^10,.^10"]
|===

h|[[quarkus-scheduler-scheduler-config_configuration]]link:#quarkus-scheduler-scheduler-config_configuration[Configuration property]

h|Type
h|Default

a|icon:lock[title=Fixed at build time] [[quarkus-scheduler-scheduler-config_quarkus.scheduler.cron-type]]`link:#quarkus-scheduler-scheduler-config_quarkus.scheduler.cron-type[quarkus.scheduler.cron-type]`

[.description]
--
The syntax used in CRON expressions.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_SCHEDULER_CRON_TYPE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_SCHEDULER_CRON_TYPE+++`
endif::add-copy-button-to-env-var[]
-- a|
`cron4j`, `quartz`, `unix`, `spring`, `spring53` 
|`quartz`


a|icon:lock[title=Fixed at build time] [[quarkus-scheduler-scheduler-config_quarkus.scheduler.metrics.enabled]]`link:#quarkus-scheduler-scheduler-config_quarkus.scheduler.metrics.enabled[quarkus.scheduler.metrics.enabled]`

[.description]
--
Scheduled task metrics will be enabled if a metrics extension is present and this value is true.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_SCHEDULER_METRICS_ENABLED+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_SCHEDULER_METRICS_ENABLED+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|`false`

|===